[package]
name = "metal-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
metal = "0.33.0"
objc = "0.2"
rand = "0.10.0"
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-std = { version = "0.5", features = ["std"] }
ark-bn254 = { version = "0.5.0", features = ["std"] }
libc = "0.2"
rayon = "1.10"
